--- a/nav.html
+++ b/nav.html
@@ -13,7 +13,7 @@
 <nav class="navbar navbar-expand-lg">
   <div class="container-fluid">
     <a class="navbar-brand" href="index.html">
-      <img src="https://via.placeholder.com/30" alt="logo" class="me-2">
+      <img src="/assets/images/logo.png" alt="logo" class="me-2">
       <span>GreenTech Solutions</span>
     </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
