--- a/nav.html
+++ b/nav.html
@@ -48,6 +48,37 @@
   </div>
 </nav>
 
+
+<!-- Carrousel -->
+<div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel" data-interval="800">
+  <div class="carousel-inner">
+    <div class="carousel-item active" style="background-image: url('image1.jpg');">
+      <div class="carousel-caption d-none d-md-block">
+        <h1 class="display-4 font-weight-bold">Services</h1>
+        <p class="lead">Home &gt; Services</p>
+      </div>
+    </div>
+    <div class="carousel-item" style="background-image: url('image2.jpg');">
+      <div class="carousel-caption d-none d-md-block">
+        <h1 class="display-4 font-weight-bold">Nos Solutions</h1>
+        <p class="lead">Home &gt; Solutions</p>
+      </div>
+    </div>
+    <div class="carousel-item" style="background-image: url('image3.jpg');">
+      <div class="carousel-caption d-none d-md-block">
+        <h1 class="display-4 font-weight-bold">Nos Projets</h1>
+        <p class="lead">Home &gt; Projets</p>
+      </div>
+    </div>
+    <div class="carousel-item" style="background-image: url('image4.jpg');">
+      <div class="carousel-caption d-none d-md-block">
+        <h1 class="display-4 font-weight-bold">Contactez-nous</h1>
+        <p class="lead">Home &gt; Contact</p>
+      </div>
+    </div>
+  </div>
+</div>
+
 <!-- Bootstrap JS and Popper.js -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 <!-- Bootstrap Icons CDN -->
