--- a/services.html
+++ b/services.html
@@ -1,56 +1,85 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Green Tech Navbar</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
-   <link rel="stylesheet" href="/css/services.css">
+    <link rel="stylesheet" href="/css/services.css">
 </head>
+
 <body>
 
-<!-- Navbar -->
-<nav class="navbar navbar-expand-lg">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="index.html">
-      <img src="/assets/images/logo.png" alt="logo" class="me-2">
-      <span>GreenTech Solutions</span>
-    </a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav" >
-      <ul class="navbar-nav ms-auto">
-        <li class="nav-item">
-          <a class="nav-link active" href="index.html">Accueil</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="about.html">À propos</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="services.html">Nos services</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="contact.html">Contact</a>
-        </li>
-      </ul>
-      <div class="d-flex align-items-center">
-        <!-- Search Input with Icon -->
-        <div class="input-group input-group-sm w-50">
-          <input type="search" class="form-control search-input" placeholder="Search..." aria-label="Search">
-          <span class="input-group-text">
-            <i class="bi bi-search"></i>
-          </span>
+    <!-- Navbar -->
+    <nav class="navbar navbar-expand-lg">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="index.html">
+                <img src="/assets/images/logo.png" alt="logo" class="me-2">
+                <span>GreenTech Solutions</span>
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item">
+                        <a class="nav-link active" href="index.html">Accueil</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="about.html">À propos</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="services.html">Nos services</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="contact.html">Contact</a>
+                    </li>
+                </ul>
+                <div class="d-flex align-items-center">
+                    <!-- Search Input with Icon -->
+                    <div class="input-group input-group-sm w-50">
+                        <input type="search" class="form-control search-input" placeholder="Search..."
+                            aria-label="Search">
+                        <span class="input-group-text">
+                            <i class="bi bi-search"></i>
+                        </span>
+                    </div>
+                    <button class="btn btn-outline-light ms-3 btn-quote">GET A QUOTE</button>
+                </div>
+            </div>
         </div>
-        <button class="btn btn-outline-light ms-3 btn-quote">GET A QUOTE</button>
-      </div>
-    </div>
-  </div>
-</nav>
+    </nav>
 
-<!-- Bootstrap JS and Popper.js -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
-<!-- Bootstrap Icons CDN -->
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.8.1/font/bootstrap-icons.min.css">
+    
+    <div class="fixed-text">
+        <h1 class="display-4 font-weight-bold">Services</h1>
+        <p class="lead">Home &gt; Services</p>
+    </div>
+    <!-- Carrousel -->
+    <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel" data-interval="2000">
+        <div class="carousel-inner">
+            <div class="carousel-item active" style="background-image: url('/assets/images/carroussel1.jpg');">
+            </div>
+            <div class="carousel-item" style="background-image: url('/assets/images/carroussel2.jpg');">
+            </div>
+            <div class="carousel-item" style="background-image: url('/assets/images/carroussel3.jpg');">
+            </div>
+            <div class="carousel-item" style="background-image: url('/assets/images/carroussel4.jpg');">
+            </div>
+        </div>
+    </div>
+
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <!-- Bootstrap JS and Popper.js -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- Bootstrap Icons CDN -->
+    <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.8.1/font/bootstrap-icons.min.css">
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <!-- Lien vers le fichier JS externe -->
+    <script src="/js/services.js"></script>
 </body>
+
 </html>
