miseajour PAGE SERVICE ET NAVBAR

--- a/services.html
+++ b/services.html
@@ -12,7 +12,7 @@
 <body>
 
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg">
+    <nav class="navbar navbar-expand-lg fixed-top">
         <div class="container-fluid">
             <a class="navbar-brand" href="index.html">
                 <img src="/assets/images/logo.png" alt="logo" class="me-2">
@@ -70,6 +70,153 @@
             </div>
         </div>
     </div>
+
+    <!-- Section de service -->
+    <div class="container mt-5">
+        <div class="row">
+            <!-- Colonne pour centrer le contenu sur l'écran -->
+            <div class="col-md-12 text-center">
+                <!-- Sous-titre de la section "Service Style 01" -->
+                <h6 class="section-subtitle">Service Style 01</h6>
+                <!-- Titre principal avec un texte plus large et en gras -->
+                <h2 class="section-title">
+                    The power of sunlight and coal, water power, winds <br> and tides do the work of the world
+                </h2>
+            </div>
+        </div>
+    </div>
+
+    <!-- Section contenant la grille des cartes -->
+<div class="container mt-5">
+    <div class="row row-cols-1 row-cols-md-4 g-4">
+        <!-- Carte 1 -->
+        <div class="col">
+            <div class="card card-custom">
+                <div class="card-body">
+                    <div class="icon">
+                        <i class="bi bi-lightning"></i> <!-- Icône verte -->
+                    </div>
+                    <h5 class="card-title">Ressources Fossiles</h5>
+                    <p class="card-text">
+                        The wind energy of contains is the largest at amount of more motive power that is, move other the things.
+                    </p>
+                </div>
+            </div>
+        </div>
+        <!-- Répéter la carte pour en avoir 8 au total -->
+        <div class="col">
+            <div class="card card-custom">
+                <div class="card-body">
+                    <div class="icon">
+                        <i class="bi bi-lightning"></i>
+                    </div>
+                    <h5 class="card-title">Ressources Fossiles</h5>
+                    <p class="card-text">
+                        The wind energy of contains is the largest at amount of more motive power that is, move other the things.
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div class="col">
+            <div class="card card-custom">
+                <div class="card-body">
+                    <div class="icon">
+                        <i class="bi bi-lightning"></i>
+                    </div>
+                    <h5 class="card-title">Ressources Fossiles</h5>
+                    <p class="card-text">
+                        The wind energy of contains is the largest at amount of more motive power that is, move other the things.
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div class="col">
+            <div class="card card-custom">
+                <div class="card-body">
+                    <div class="icon">
+                        <i class="bi bi-lightning"></i>
+                    </div>
+                    <h5 class="card-title">Ressources Fossiles</h5>
+                    <p class="card-text">
+                        The wind energy of contains is the largest at amount of more motive power that is, move other the things.
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div class="col">
+            <div class="card card-custom">
+                <div class="card-body">
+                    <div class="icon">
+                        <i class="bi bi-lightning"></i>
+                    </div>
+                    <h5 class="card-title">Ressources Fossiles</h5>
+                    <p class="card-text">
+                        The wind energy of contains is the largest at amount of more motive power that is, move other the things.
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div class="col">
+            <div class="card card-custom">
+                <div class="card-body">
+                    <div class="icon">
+                        <i class="bi bi-lightning"></i>
+                    </div>
+                    <h5 class="card-title">Ressources Fossiles</h5>
+                    <p class="card-text">
+                        The wind energy of contains is the largest at amount of more motive power that is, move other the things.
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div class="col">
+            <div class="card card-custom">
+                <div class="card-body">
+                    <div class="icon">
+                        <i class="bi bi-lightning"></i>
+                    </div>
+                    <h5 class="card-title">Ressources Fossiles</h5>
+                    <p class="card-text">
+                        The wind energy of contains is the largest at amount of more motive power that is, move other the things.
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div class="col">
+            <div class="card card-custom">
+                <div class="card-body">
+                    <div class="icon">
+                        <i class="bi bi-lightning"></i>
+                    </div>
+                    <h5 class="card-title">Ressources Fossiles</h5>
+                    <p class="card-text">
+                        The wind energy of contains is the largest at amount of more motive power that is, move other the things.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+<!-- Section pour afficher le nombre d'années et le texte associé -->
+<div class="container mt-5">
+    <div class="row align-items-center">
+        <!-- Colonne gauche avec le grand nombre 29 -->
+        <div class="col-md-6">
+            <div class="experience-number"><img src="/assets/images/29.jpg" alt="nombre 29"></div>
+            <div class="experience-subtitle">Years of Experience...</div>
+        </div>
+
+        <!-- Colonne droite avec le texte explicatif -->
+        <div class="col-md-6">
+            <div class="experience-text">
+                <h2>Solar power is the last energy resource that isn't owned yet nobody taxes the sun yet</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas Lorem ipsum dolor sit amet</p>
+            </div>
+        </div>
+    </div>
+</div>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <!-- Bootstrap JS and Popper.js -->
