--- a/nav.html
+++ b/nav.html
@@ -10,7 +10,7 @@
 <body>
 
 <!-- Navbar -->
-<nav class="navbar navbar-expand-lg">
+<nav class="navbar navbar-expand-lg fixed-top">
   <div class="container-fluid">
     <a class="navbar-brand" href="index.html">
       <img src="/assets/images/logo.png" alt="logo" class="me-2">
