--- a/services.html
+++ b/services.html
@@ -52,7 +52,7 @@
         </div>
     </nav>
 
-    
+
     <div class="fixed-text">
         <h1 class="display-4 font-weight-bold">Services</h1>
         <p class="lead">Home &gt; Services</p>
@@ -67,6 +67,55 @@
             <div class="carousel-item" style="background-image: url('/assets/images/carroussel3.jpg');">
             </div>
             <div class="carousel-item" style="background-image: url('/assets/images/carroussel4.jpg');">
+            </div>
+        </div>
+    </div>
+
+    <!-- Nos Étapes de Travail -->
+    <div class="container text-center mt-5">
+        <h2>Nos étapes de travail</h2>
+        <div class="row mt-4">
+            <div class="col-md-4">
+                <div class="circle circle-5">
+                    <div class="circle circle-4">
+                        <div class="circle circle-3">
+                            <div class="circle circle-2">
+                                <div class="circle circle-1">1
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <h5>Planification de projet</h5>
+                <p>L’énergie éolienne est l’une des ressources les plus durables disponibles.</p>
+            </div>
+            <div class="col-md-4">
+                <div class="circle circle-5">
+                    <div class="circle circle-4">
+                        <div class="circle circle-3">
+                            <div class="circle circle-2">
+                                <div class="circle circle-1">2
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <h5>Recherche & Analyse</h5>
+                <p>Nous menons une étude approfondie avant de lancer un projet.</p>
+            </div>
+            <div class="col-md-4">
+                <div class="circle circle-5">
+                    <div class="circle circle-4">
+                        <div class="circle circle-3">
+                            <div class="circle circle-2">
+                                <div class="circle circle-1">3
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <h5>Projet terminé</h5>
+                <p>Nous livrons des résultats optimaux pour un changement durable.</p>
             </div>
         </div>
     </div>
@@ -87,137 +136,222 @@
     </div>
 
     <!-- Section contenant la grille des cartes -->
-<div class="container mt-5">
-    <div class="row row-cols-1 row-cols-md-4 g-4">
-        <!-- Carte 1 -->
-        <div class="col">
-            <div class="card card-custom">
-                <div class="card-body">
-                    <div class="icon">
-                        <i class="bi bi-lightning"></i> <!-- Icône verte -->
+    <div class="container mt-5">
+        <div class="row row-cols-1 row-cols-md-4 g-4">
+            <!-- Carte 1 -->
+            <div class="col">
+                <div class="card card-custom">
+                    <div class="card-body">
+                        <div class="icon">
+                            <i class="bi bi-lightning"></i> <!-- Icône verte -->
+                        </div>
+                        <h5 class="card-title">Ressources Fossiles</h5>
+                        <p class="card-text">
+                            The wind energy of contains is the largest at amount of more motive power that is, move
+                            other the things.
+                        </p>
                     </div>
-                    <h5 class="card-title">Ressources Fossiles</h5>
-                    <p class="card-text">
-                        The wind energy of contains is the largest at amount of more motive power that is, move other the things.
-                    </p>
                 </div>
             </div>
-        </div>
-        <!-- Répéter la carte pour en avoir 8 au total -->
-        <div class="col">
-            <div class="card card-custom">
-                <div class="card-body">
-                    <div class="icon">
-                        <i class="bi bi-lightning"></i>
+            <!-- Répéter la carte pour en avoir 8 au total -->
+            <div class="col">
+                <div class="card card-custom">
+                    <div class="card-body">
+                        <div class="icon">
+                            <i class="bi bi-lightning"></i>
+                        </div>
+                        <h5 class="card-title">Ressources Fossiles</h5>
+                        <p class="card-text">
+                            The wind energy of contains is the largest at amount of more motive power that is, move
+                            other the things.
+                        </p>
                     </div>
-                    <h5 class="card-title">Ressources Fossiles</h5>
-                    <p class="card-text">
-                        The wind energy of contains is the largest at amount of more motive power that is, move other the things.
-                    </p>
                 </div>
             </div>
-        </div>
-        <div class="col">
-            <div class="card card-custom">
-                <div class="card-body">
-                    <div class="icon">
-                        <i class="bi bi-lightning"></i>
+            <div class="col">
+                <div class="card card-custom">
+                    <div class="card-body">
+                        <div class="icon">
+                            <i class="bi bi-lightning"></i>
+                        </div>
+                        <h5 class="card-title">Ressources Fossiles</h5>
+                        <p class="card-text">
+                            The wind energy of contains is the largest at amount of more motive power that is, move
+                            other the things.
+                        </p>
                     </div>
-                    <h5 class="card-title">Ressources Fossiles</h5>
-                    <p class="card-text">
-                        The wind energy of contains is the largest at amount of more motive power that is, move other the things.
-                    </p>
                 </div>
             </div>
-        </div>
-        <div class="col">
-            <div class="card card-custom">
-                <div class="card-body">
-                    <div class="icon">
-                        <i class="bi bi-lightning"></i>
+            <div class="col">
+                <div class="card card-custom">
+                    <div class="card-body">
+                        <div class="icon">
+                            <i class="bi bi-lightning"></i>
+                        </div>
+                        <h5 class="card-title">Ressources Fossiles</h5>
+                        <p class="card-text">
+                            The wind energy of contains is the largest at amount of more motive power that is, move
+                            other the things.
+                        </p>
                     </div>
-                    <h5 class="card-title">Ressources Fossiles</h5>
-                    <p class="card-text">
-                        The wind energy of contains is the largest at amount of more motive power that is, move other the things.
-                    </p>
                 </div>
             </div>
-        </div>
-        <div class="col">
-            <div class="card card-custom">
-                <div class="card-body">
-                    <div class="icon">
-                        <i class="bi bi-lightning"></i>
+            <div class="col">
+                <div class="card card-custom">
+                    <div class="card-body">
+                        <div class="icon">
+                            <i class="bi bi-lightning"></i>
+                        </div>
+                        <h5 class="card-title">Ressources Fossiles</h5>
+                        <p class="card-text">
+                            The wind energy of contains is the largest at amount of more motive power that is, move
+                            other the things.
+                        </p>
                     </div>
-                    <h5 class="card-title">Ressources Fossiles</h5>
-                    <p class="card-text">
-                        The wind energy of contains is the largest at amount of more motive power that is, move other the things.
-                    </p>
                 </div>
             </div>
-        </div>
-        <div class="col">
-            <div class="card card-custom">
-                <div class="card-body">
-                    <div class="icon">
-                        <i class="bi bi-lightning"></i>
+            <div class="col">
+                <div class="card card-custom">
+                    <div class="card-body">
+                        <div class="icon">
+                            <i class="bi bi-lightning"></i>
+                        </div>
+                        <h5 class="card-title">Ressources Fossiles</h5>
+                        <p class="card-text">
+                            The wind energy of contains is the largest at amount of more motive power that is, move
+                            other the things.
+                        </p>
                     </div>
-                    <h5 class="card-title">Ressources Fossiles</h5>
-                    <p class="card-text">
-                        The wind energy of contains is the largest at amount of more motive power that is, move other the things.
-                    </p>
                 </div>
             </div>
-        </div>
-        <div class="col">
-            <div class="card card-custom">
-                <div class="card-body">
-                    <div class="icon">
-                        <i class="bi bi-lightning"></i>
+            <div class="col">
+                <div class="card card-custom">
+                    <div class="card-body">
+                        <div class="icon">
+                            <i class="bi bi-lightning"></i>
+                        </div>
+                        <h5 class="card-title">Ressources Fossiles</h5>
+                        <p class="card-text">
+                            The wind energy of contains is the largest at amount of more motive power that is, move
+                            other the things.
+                        </p>
                     </div>
-                    <h5 class="card-title">Ressources Fossiles</h5>
-                    <p class="card-text">
-                        The wind energy of contains is the largest at amount of more motive power that is, move other the things.
-                    </p>
                 </div>
             </div>
-        </div>
-        <div class="col">
-            <div class="card card-custom">
-                <div class="card-body">
-                    <div class="icon">
-                        <i class="bi bi-lightning"></i>
+            <div class="col">
+                <div class="card card-custom">
+                    <div class="card-body">
+                        <div class="icon">
+                            <i class="bi bi-lightning"></i>
+                        </div>
+                        <h5 class="card-title">Ressources Fossiles</h5>
+                        <p class="card-text">
+                            The wind energy of contains is the largest at amount of more motive power that is, move
+                            other the things.
+                        </p>
                     </div>
-                    <h5 class="card-title">Ressources Fossiles</h5>
-                    <p class="card-text">
-                        The wind energy of contains is the largest at amount of more motive power that is, move other the things.
-                    </p>
                 </div>
             </div>
         </div>
     </div>
-</div>
 
 
-<!-- Section pour afficher le nombre d'années et le texte associé -->
-<div class="container mt-5">
-    <div class="row align-items-center">
-        <!-- Colonne gauche avec le grand nombre 29 -->
-        <div class="col-md-6">
-            <div class="experience-number"><img src="/assets/images/29.jpg" alt="nombre 29"></div>
-            <div class="experience-subtitle">Years of Experience...</div>
-        </div>
+    <!-- Section pour afficher le nombre d'années et le texte associé -->
+    <div class="container mt-5">
+        <div class="row align-items-center">
+            <!-- Colonne gauche avec le grand nombre 29 -->
+            <div class="col-md-6">
+                <div class="experience-number"><img src="/assets/images/29.jpg" alt="nombre 29"></div>
+                <div class="experience-subtitle">Years of Experience...</div>
+            </div>
 
-        <!-- Colonne droite avec le texte explicatif -->
-        <div class="col-md-6">
-            <div class="experience-text">
-                <h2>Solar power is the last energy resource that isn't owned yet nobody taxes the sun yet</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas Lorem ipsum dolor sit amet</p>
+            <!-- Colonne droite avec le texte explicatif -->
+            <div class="col-md-6">
+                <div class="experience-text">
+                    <h2>Solar power is the last energy resource that isn't owned yet nobody taxes the sun yet</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                        labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra
+                        maecenas Lorem ipsum dolor sit amet</p>
+                </div>
             </div>
         </div>
     </div>
-</div>
 
+    <!-- Section de service -->
+    <div class="container mt-5">
+        <div class="row">
+            <!-- Colonne pour centrer le contenu sur l'écran -->
+            <div class="col-md-12 text-center">
+                <!-- Sous-titre de la section "Service Style 01" -->
+                <h6 class="section-subtitle">Service Style 02</h6>
+                <!-- Titre principal avec un texte plus large et en gras -->
+                <h2 class="section-title">
+                    Earth, water, fire, and wind. Where there <br>is energy there is life.
+                </h2>
+            </div>
+        </div>
+    </div>
+
+
+    <!-- Footer -->
+    <footer class="footer">
+        <div class="container">
+
+            <!-- Company Logo and Description -->
+            <div class="text-center">
+                <div class="footer-logo"><img src="/assets/images/logo.png" alt="logo" class="me-2">Green Tech Solutions</div>
+                <p>Long established fact that a reader will be distracted by the readable content...</p>
+                <div class="social-icons">
+                    <a href="#"><i class="bi bi-twitter"></i></a>
+                    <a href="#"><i class="bi bi-facebook"></i></a>
+                    <a href="#"><i class="bi bi-instagram"></i></a>
+                    <a href="#"><i class="bi bi-skype"></i></a>
+                </div>
+            </div>
+            <div class="row">
+                <div class="divider"></div>
+                <!-- Contact Section -->
+                <div class="col-md-3 text-center">
+                    <p><strong>Contact Rapide</strong></p>
+                    <p><strong>Téléphone:</strong></p>
+                    <p>+237 (69-------)<br>+237 (67-------)</p>
+                    <p><strong>Email:</strong><br>
+                        <a href="mailto:GreenSolutions@energie.com">GreenSolutions@energie.com</a>
+                    </p>
+                </div>
+
+                <!-- Recent Posts and Links -->
+                <div class="col-md-3">
+                    <p><strong>Post Recent</strong></p>
+                    <a href="#">Flow is the nature of wind energy</a><br>
+                    <small>January 21, 2022</small><br>
+                    <a href="#">The wind energy or active exercise</a><br>
+                    <small>January 21, 2022</small><br>
+
+
+                </div>
+                <div class="col-md-3">
+                    <p><strong>Liens Importants</strong></p>
+                    <a href="#">A Propos</a>
+                </div>
+                <div class="col-md-3">
+                    <p><strong>Abonnez-Vous</strong></p>
+                    <p>Long established fact that a reader will be distracted by the readable content...</p>
+                    <form class="d-flex justify-content-center">
+                        <input type="email" class="form-control w-50" placeholder="Votre Email">
+                        <button class="btn btn-success ms-2">Souscrire</button>
+                </div>
+            </div>
+        </div>
+        <!-- Footer Bottom -->
+        <div class="col-md-12 footer-bottom">
+            <div class="col-md-6">
+                <p>Copyright &copy; EnergIn2024. All Rights Reserved</p>
+            </div>
+            <div class="col-md-6 text-center"> <p class="word-spacing: 10px;"><a href="#">Terms & Condition</a> <a href="#">HelpCenter</a>  <a href="#">Testimonial</a>  <a href="#">Service</a> </p>
+            </div>
+        </div>
+    </footer>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <!-- Bootstrap JS and Popper.js -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
