Quatrieme Commit Modification Supplémentaires

--- a/index.html
+++ b/index.html
@@ -65,22 +65,22 @@
             <div class="carousel-item">
                 <div class="carousel-caption text-start">
                     <h3>ÉNERGIE ÉOLIENNE</h3>
-                    <h1>Nous investissons dans l'avenir <br> de la planète !</h1>
-                    <p>En tant que distributeur mondial de fournitures solaires, nous nous efforçons defournir un <br> 
-                        service rapide et compétent. Nous pouvons vous livrer les matériaux par voie maritime ou aérienne.</p>
+                    <h1>Alimentez la société avec <br> une énergie fiable !</h1>
+                    <p>En tant que distributeur mondial de solutions solaires, nous nous efforçons de fournir <br> un service rapide 
+                        et expert. Nous pouvons vous livrer les matériaux par voie maritime ou aérienne.</p>
                     <a href="#" class="btn btn-custom">En savoir plus</a>
                 </div>
-                <img src="assets/images/centrale-energie-solaire_1387-61.jpg" class="d-block w-100" alt="Énergie éolienne">
+                <img src="assets/images/wind-farm1.jpg" class="d-block w-100" alt="Énergie éolienne">
             </div>
             <div class="carousel-item">
                 <div class="carousel-caption text-start">
                     <h3>ÉNERGIE ÉOLIENNE</h3>
-                    <h1>Nous investissons dans l'avenir <br> de la planète !</h1>
-                    <p>En tant que distributeur mondial de fournitures solaires, nous nous efforçons defournir un <br> 
+                    <h1>L’énergie éolienne est la source <br> d’énergie la plus abondante sur Terre.</h1>
+                    <p>En tant que distributeur mondial de fournitures solaires, nous nous efforçons defournir un <br>
                         service rapide et compétent. Nous pouvons vous livrer les matériaux par voie maritime ou aérienne.</p>
                     <a href="#" class="btn btn-custom">En savoir plus</a>
                 </div>
-                <img src="assets/images/scierie-pour-production-planches-bois_342744-396.jpg" class="d-block w-100" alt="Énergie éolienne">
+                <img src="assets/images/wind-farm2.jpg" class="d-block w-100" alt="Énergie éolienne">
             </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#heroCarousel" data-bs-slide="prev">
@@ -367,7 +367,7 @@
         <h2 class="heading">Témoignages de Nos Clients</h2> 
         <div class="row mt-5">
             <div class="col-md-4">
-                <img src="assets/images/home-03-70x70.jpg" alt="">
+                <img src="assets/images/home-03-70x70.jpg" class="rounded-circle" alt="">
                 <h6>Markus Breitbart</h6>
                 <p>
                     Grâce à l installation de panneaux 
@@ -378,7 +378,7 @@
                     impeccable </p>
             </div>
             <div class="col-md-4">
-                <img src="assets/images/home-04-70x70.jpg" alt="">
+                <img src="assets/images/home-04-70x70.jpg" class="rounded-circle" alt="">
                 <h6>Thomas L., Responsable de projet </h6>
                 <p>environnemental
 
@@ -390,7 +390,7 @@
                     durable !</p>
             </div>
             <div class="col-md-4">
-                <img src="assets/images/home-05-70x70.jpg" alt="">
+                <img src="assets/images/home-05-70x70.jpg" class="rounded-circle" alt="">
                 <h6>Marie P., Agricultrice</h6>
                 <p>Le système de biométhanisation 
                     installé sur notre exploitation nous 
