miseajour footer et services

--- a/services.html
+++ b/services.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Green Tech Navbar</title>
+    <title>Green Tech </title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="/css/services.css">
 </head>
@@ -323,8 +323,11 @@
                 <!-- Recent Posts and Links -->
                 <div class="col-md-3">
                     <p><strong>Post Recent</strong></p>
+                    <img src="/assets/images/footer1.jpg " alt="Post 1" width=50px height=50px>
                     <a href="#">Flow is the nature of wind energy</a><br>
                     <small>January 21, 2022</small><br>
+                    <div class="divider"></div>
+                    <img src="/assets/images/footer2.jpeg" alt="Post 2" width=50px height=50px>
                     <a href="#">The wind energy or active exercise</a><br>
                     <small>January 21, 2022</small><br>
 
@@ -344,11 +347,27 @@
             </div>
         </div>
         <!-- Footer Bottom -->
-        <div class="col-md-12 footer-bottom">
-            <div class="col-md-6">
-                <p>Copyright &copy; EnergIn2024. All Rights Reserved</p>
-            </div>
-            <div class="col-md-6 text-center"> <p class="word-spacing: 10px;"><a href="#">Terms & Condition</a> <a href="#">HelpCenter</a>  <a href="#">Testimonial</a>  <a href="#">Service</a> </p>
+        <div class=" text-white py-3 footer-bottom">
+            <div class="row">
+                <div class="col-md-6">
+                    <ul class="list-inline mb-0">
+                        <li class="list-inline-item">
+                            <a href="#" class="text-white text-decoration-none">Terms & Condition</a>
+                        </li>
+                        <li class="list-inline-item">
+                            <a href="#" class="text-white text-decoration-none">Help Center</a>
+                        </li>
+                        <li class="list-inline-item">
+                            <a href="#" class="text-white text-decoration-none">Testimonial</a>
+                        </li>
+                        <li class="list-inline-item">
+                            <a href="#" class="text-white text-decoration-none">Service</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="col-md-6 text-md-end">
+                    <p class="mb-0">Copyright &copy; Energin 2024. All Right Reserved</p>
+                </div>
             </div>
         </div>
     </footer>
