Commit Modification Supplémentaire

--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
                         <div class="projets-box">
                             <div class="projets-detail active">
                             <h3>Centrale Solaire de Douala</h3>
-                            <p>
+                            <p class="douala">
 
                                 Objectif : Réduire la dépendance 
                                 
@@ -307,7 +307,7 @@
             
                             <div class="projets-detail">
                                 <h3>Parc Éolien du Littoral</h3>
-                            <p> 
+                            <p class="littoral"> 
                                 Objectif : Exploiter la puissance du 
                                 vent pour <br> une production d’électricité 
                                 propre et continue. <br> Installation : 12 éoliennes de dernière 
