--- a/about.html
+++ b/about.html
@@ -112,7 +112,7 @@
     <div class="row align-items-center">
         <!-- Colonne gauche avec le grand nombre 29 -->
         <div class="col-md-4">
-            <div ><img src="assets/images/Group 41.jpg" alt="nombre 29"></div>
+            <div ><img src="assets/images/Group 38.jpg" alt="nombre 29"></div>
             <div class="experience-subtitle text-primary-emphasis h3 mt-3">Years of Experience...</div>
         </div>
 
@@ -274,7 +274,7 @@
 <!-- tEAM Members -->
 <section class="container text-center mt-5">
     <h2 class="h6 text-success">Team Members</h2> 
-    <h1 class="text-primary-emphasis h2">SADFGHJKL::OIUYTRESXCVBN</h1>
+    <h1 class="text-primary-emphasis h2">The use of solar energy has not been opened up because the oil industry does not own the sun.</h1>
     <div class="row mt-5">
         <div class="col-md-3 position-relative">
             <img src="assets/images/istockphoto-1328903775-1024x1024 1.jpg" alt="">
@@ -338,8 +338,11 @@
             <!-- Recent Posts and Links -->
             <div class="col-md-3">
                 <p><strong>Post Recent</strong></p>
+                <img src="assets/images/footer1.jpg " alt="Post 1" width=50px height=50px>
                 <a href="#">Flow is the nature of wind energy</a><br>
                 <small>January 21, 2022</small><br>
+                <div class="divider"></div>
+                <img src="assets/images/footer2.jpeg" alt="Post 2" width=50px height=50px>
                 <a href="#">The wind energy or active exercise</a><br>
                 <small>January 21, 2022</small><br>
 
@@ -359,15 +362,30 @@
         </div>
     </div>
     <!-- Footer Bottom -->
-    <div class="col-md-12 footer-bottom">
-        <div class="col-md-6">
-            <p>Copyright &copy; EnergIn2024. All Rights Reserved</p>
-        </div>
-        <div class="col-md-6 text-center"> <p class="word-spacing: 10px;"><a href="#">Terms & Condition</a> <a href="#">HelpCenter</a>  <a href="#">Testimonial</a>  <a href="#">Service</a> </p>
+    <div class=" text-white py-3 footer-bottom">
+        <div class="row">
+            <div class="col-md-6">
+                <ul class="list-inline mb-0">
+                    <li class="list-inline-item">
+                        <a href="#" class="text-white text-decoration-none">Terms & Condition</a>
+                    </li>
+                    <li class="list-inline-item">
+                        <a href="#" class="text-white text-decoration-none">Help Center</a>
+                    </li>
+                    <li class="list-inline-item">
+                        <a href="#" class="text-white text-decoration-none">Testimonial</a>
+                    </li>
+                    <li class="list-inline-item">
+                        <a href="#" class="text-white text-decoration-none">Service</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="col-md-6 text-md-end">
+                <p class="mb-0">Copyright &copy; Energin 2024. All Right Reserved</p>
+            </div>
         </div>
     </div>
-</footer>
-                                
+</footer>                                
                        
     </body>
 </html>
