--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
         <h2 class="heading">NOS SERVICES</h2> 
         <div class="row mt-5">
             <div class="col-md-4">
-                <img src="assets/images/🦆 icon _tech solar panel_.png" alt="">
+                <img src="assets/images/solarpanel.png" alt="">
                 <h5>PANNEAU SOLAIRE</h5>
                 <p>GreenTech Solutions valorise 
 
@@ -203,7 +203,7 @@
                      de gaz à effet de serre</p>
             </div>
             <div class="col-md-4">
-                <img src="assets/images/🦆 icon _biomass energy_.png" alt="">
+                <img src="assets/images/biomass energy.png" alt="">
                 <h5>BIOMASSE ET BIOGAZ</h5>
                 <p>GreenTech Solutions conçoit, 
 
