--- a/services.html
+++ b/services.html
@@ -25,13 +25,13 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link active" href="index.html">Accueil</a>
+                        <a class="nav-link " href="index.html">Accueil</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="about.html">À propos</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="services.html">Nos services</a>
+                        <a class="nav-link active" href="services.html">Nos services</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="contact.html">Contact</a>
